--- a/pom.xml
+++ b/pom.xml
@@ -84,6 +84,12 @@
             <version>1.5.5.Final</version>
         </dependency>
 
+        <dependency>
+            <groupId>com.opencsv</groupId>
+            <artifactId>opencsv</artifactId>
+            <version>5.12.0</version>
+        </dependency>
+
     </dependencies>
 
     <build>
